[로또 미션] 김명지 미션 제출합니다. (#29)
* refactor: 리팩토링

- 복잡한 연산을 메서드로 분리한다.
- 매직넘버는 상수로 분리한다.
- 한번만 사용되는 변수는 제거한다.

* feat: 3단계 1차 구현

* feat: enum 도입

- LottoMatch : 당첨 금액 및 당첨 결과가 저장된 key가 저장된 enum class
- LottoBoundary: 로또 경계값 enum class

* fix: 2등과 3등이 함께 세어지는 에러 해결

- 로또 번호가 5개 일치하고 보너스 번호까지 일치할 경우 2등으로만 세어지도록 변경한다.

* test: 변경된 코드에 따라 테스트 추가

* rename: 상수 패키지로 분리

- 상수 클래스는 constant 패키지로 분리한다.

* fix: 매칭 결과 key로 조회하도록 수정

- 매칭 결과는 cnt가 아닌 key로 조회해야한다. 2등과 3등은 매칭 결과는 같지만, 보너스볼 일치 여부가 다르므로 key가 다르다.

* refactor: 리팩토링

- 복잡한 연산 메서드로 분리한다.
- 주생성자를 호출하여 부생성자를 둔다.

* refactor: 메서드 간결하게 수정

* style: formatting

* docs: README 업데이트

* refactor: 메서드를 분리하여 메서드 행위 잘 드러나도록 수정

- 복잡한 연산을 메서드로 분리하여 stream 사용시 행위가 잘 드러나도록 수정한다.

* refactor: 배열 대신 컬렉션을 사용하도록 수정한다.

* style: code formatting

* refactor: enum 클래스 목적에 맞게 리팩토링

- LottoNumberRange: 로또 번호 범위 상수 클래스
- LottoRank: 로또 도메인이 드러나도록 등수로 상수명 변경
- LOTTO_SIZE와 LOTTO_PRICE는 클래스 안에서만 사용하므로 각 클래스 내의 상수로 정의

* refactor: 특별한 값을 가지는 0은 상수로 정의

- 가격의 초기값을 나타내는 0은 특별한 의미를 가지므로 상수로 정의한다.

* feat: LottoResult에 merge 메서드 추가하여 불변성 유지

- LottoResult끼리 merge하는 메서드를 생성하여 LottoResult 업데이트시 result를 직접 수정하지 않고 새로운 LottoResult를 생성하여 불변성을 유지한다.

* feat: 로또 번호 일치 개수와 보너스 번호 일치에 따른 당첨 등수 찾는 기능 구현

* test: LottoTest 테스트 추가 및 리팩토링

* refactor: 로또 수익률 계산 메서드 Price로 이동

- 로또 수익률 계산은 Price의 책임에 가까우므로 LottoResult에서 Price로 이동

* test: 테스트 추가

* refactor: 리팩토링

- OutputView의 내부 구현에 의존하지 않고 객체에게 메세지를 보내도록 수정
- 메서드명 변경

* refactor: controller에서 Lotto 로직 분리

- 당첨 번호 중복 로직은 Lotto에 포함되도록 수정
- 메서드명 변경

* refactor: 검증 메서드 분리

* test: 테스트 코드 변경

- 변경된 코드에 따른 테스트 추가
- 메서드명 변경

* refactor: 10줄 넘지 않도록 메서드 수정

* refactor: 리팩토링

- 매직넘버를 상수로 변경한다.
- 구매금액이 0원일때 다시 입력받도록 수정한다.